--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
-    /* background-color: khaki; */
-    background-image: url("/images/66cfd98981481c599425359bff0a628e.jpg");
+    background-color: khaki;
+    /* background-image: url("/images/66cfd98981481c599425359bff0a628e.jpg"); */
 }
 
 .header {
