--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,32 @@ a {
     font-family: fantasy;
 }
 
-#boton {
-    border-radius: 20px;
-    background-color: cadetblue;
+#btn {
+    background: #00e7fc;
+    background-image: -webkit-linear-gradient(top, #00e7fc, #2980b9);
+    background-image: -moz-linear-gradient(top, #00e7fc, #2980b9);
+    background-image: -ms-linear-gradient(top, #00e7fc, #2980b9);
+    background-image: -o-linear-gradient(top, #00e7fc, #2980b9);
+    background-image: linear-gradient(to bottom, #00e7fc, #2980b9);
+    -webkit-border-radius: 15;
+    -moz-border-radius: 15;
+    border-radius: 15px;
+    font-family: Courier New;
+    color: #241f24;
+    font-size: 23px;
+    padding: 10px 20px 10px 20px;
+    border: solid #1f628d 5px;
+    text-decoration: none;
+}
+
+#btn:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
 }
 
 .article {
