--- a/css/style.css
+++ b/css/style.css
@@ -1,88 +1,100 @@
-body {
-    background-color: khaki;
-    /* background-image: url("/images/66cfd98981481c599425359bff0a628e.jpg"); */
-}
-
-.header {
-    font-size: 36px;
-    color: slategray;
-    font-family: cursive;
-    text-align: center;
-    border: 1px solid #000;
-    padding: 20px;
-    border-radius: 100px 0px 100px 0px;
-    -moz-border-radius: 100px 0px 100px 0px;
-    -webkit-border-radius: 100px 0px 100px 0px;
-    border: 9px double #000000;
-    background-color: burlywood;
-}
-
-#enlaces {
-    text-align: center;
-    font-family: sans-serif;
-    background-color: burlywood;
-    border-radius: 20px;
-}
-
-#enlaces li {
-    display: inline;
-}
-
-a {
-    text-align: center;
-    color: #000;
-    text-decoration: none;
-    font-family: fantasy;
-}
-
-#btn {
-    background: #00e7fc;
-    background-image: -webkit-linear-gradient(top, #00e7fc, #2980b9);
-    background-image: -moz-linear-gradient(top, #00e7fc, #2980b9);
-    background-image: -ms-linear-gradient(top, #00e7fc, #2980b9);
-    background-image: -o-linear-gradient(top, #00e7fc, #2980b9);
-    background-image: linear-gradient(to bottom, #00e7fc, #2980b9);
-    -webkit-border-radius: 15;
-    -moz-border-radius: 15;
-    border-radius: 15px;
-    font-family: Courier New;
-    color: #241f24;
-    font-size: 23px;
-    padding: 10px 20px 10px 20px;
-    border: solid #1f628d 5px;
-    text-decoration: none;
-}
-
-#btn:hover {
-    background: #3cb0fd;
-    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-    text-decoration: none;
-}
-
-.article {
-    align-content: center;
-    border: 2px solid #000;
-    border-radius: 30px 0px 30px 0px;
-    padding: 10px;
-    padding-right: 20px;
-    background-color: navajowhite;
-}
-
-.fecha {
-    padding: 20px;
-    font-size: small;
-    font-style: italic;
-}
-
-#presentacion {
-    text-align: center;
-}
-
-footer {
-    text-align: center;
-    text-decoration: underline;
-}
+    body {
+        background-color: khaki;
+        /* background-image: url("/images/66cfd98981481c599425359bff0a628e.jpg"); */
+    }
+    
+    .header {
+        font-size: 36px;
+        color: slategray;
+        font-family: cursive;
+        text-align: center;
+        border: 1px solid #000;
+        padding: 20px;
+        border-radius: 100px 0px 100px 0px;
+        -moz-border-radius: 100px 0px 100px 0px;
+        -webkit-border-radius: 100px 0px 100px 0px;
+        border: 9px double #000000;
+        background-color: burlywood;
+    }
+    
+    #enlaces {
+        text-align: center;
+        font-family: sans-serif;
+        background-color: burlywood;
+        border-radius: 20px;
+        padding: 5px;
+    }
+    
+    #enlaces li {
+        display: inline;
+    }
+    
+    a {
+        text-align: center;
+        color: #000;
+        text-decoration: none;
+        font-family: fantasy;
+    }
+    
+    #btn {
+        background: #00e7fc;
+        background-image: -webkit-linear-gradient(top, #00e7fc, #2980b9);
+        background-image: -moz-linear-gradient(top, #00e7fc, #2980b9);
+        background-image: -ms-linear-gradient(top, #00e7fc, #2980b9);
+        background-image: -o-linear-gradient(top, #00e7fc, #2980b9);
+        background-image: linear-gradient(to bottom, #00e7fc, #2980b9);
+        -webkit-border-radius: 15;
+        -moz-border-radius: 15;
+        border-radius: 15px;
+        font-family: Courier New;
+        color: #241f24;
+        font-size: 23px;
+        padding: 10px 20px 10px 20px;
+        border: solid #1f628d 5px;
+        text-decoration: none;
+        cursor: pointer;
+    }
+    
+    #btn:hover {
+        background: #3cb0fd;
+        background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+        text-decoration: none;
+    }
+    
+    .article {
+        align-content: center;
+        border: 2px solid #000;
+        border-radius: 30px 0px 30px 0px;
+        padding: 10px;
+        padding-right: 20px;
+        background-color: navajowhite;
+    }
+    
+    .fecha {
+        padding: 20px;
+        font-size: small;
+        font-style: italic;
+    }
+    
+    #presentacion {
+        text-align: center;
+    }
+    
+    footer {
+        text-align: center;
+        text-decoration: underline;
+    }
+    
+    #btnX {
+        background-color: #3cb0fd;
+        cursor: pointer;
+        border-radius: 10px;
+        font-family: Courier New;
+        color: #241f24;
+        font-size: 15px;
+        padding: 5px 10px 5px 10px;
+    }
